<resources>
    <string name="app_name">GamigosJava</string>
    <string name="default_web_client_id">926606784545-2bg7pcteaqbg7nn9rn0enpae0v56mnta.apps.googleusercontent.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_bar_hint">Search Users…</string>
    <string name="search_text">Search</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="display_name">Display Name</string>
    <string name="add">Add</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="search_friends">Search Friends</string>
    <string name="friend_photo">Friend Photo</string>
    <string name="friend_name">Friend name</string>
    <string name="friend_request_photo">Friend Request Photo</string>
    <string name="requesting_user">Requesting User</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="user_profile">User Profile</string>
    <string name="email">Email</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="deny">Deny</string>
    <string name="add_friend">Add Friend</string>
    <string name="requests">Requests</string>
    <string name="user_name">User name</string>
    <string name="pending">Pending</string>
    <string name="unfriend">Unfriend</string>
    <string name="friend">Friend</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="message_ellipses">Message...</string>
    <string name="messages">Messages</string>
    <string name="conversation_avatar">Conversation Avatar</string>
    <string name="start_new_conversation">Start new conversation</string>
    <string name="friend_avatar">Friend Avatar</string>
    <string name="group_photo_preview">Group Photo Preview</string>
    <string name="clear_group_photo">Clear Group Photo</string>
    <string name="message_menu">Message Menu</string>
    <string name="change_title">Change title</string>
    <string name="change_conversation_picture">Change conversation picture</string>
    <string name="add_remove_participants">Add/remove participants</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="add_people_to_conversation">Add people to conversation</string>
    <string name="selected_participants">Selected Participants</string>
    <string name="group_title">Group title</string>
    <string name="choose_group_photo_optional">Choose group photo (optional)</string>
    <string name="initial_message">Initial message</string>
    <string name="start_conversation">Start Conversation</string>
    <string name="save_changes">Save changes</string>
    <string name="group_photo_selected">Group photo selected</string>
    <string name="start_direct_message">Start direct message</string>
    <string name="start_group_chat">Start group chat</string>
    <string name="clear_all">Clear all</string>
    <string name="select">Select</string>
    <string name="delete_selected">Delete selected</string>
    <string name="cancel">Cancel</string>
    <string name="conversation_info">Conversation Info</string>
    <string name="conversation_photo">Conversation Photo</string>
    <string name="favorites">Favorites</string>
    <string name="friends">Friends</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="privacy_options">Privacy Options</string>
    <string name="public_option">Public</string>
    <string name="friends_only">Friends only</string>
    <string name="private_option">Private</string>
    <string name="save">Save</string>
    <string name="quick_game">Quick Game</string>
    <string name="log_out">Log Out</string>
    <string name="edit_profile_photo">Edit profile photo</string>
</resources>