<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="2dp"
    app:strokeWidth="1dp"
    android:layout_marginVertical="3dp"
    app:strokeColor="#33000000"
    app:cardBackgroundColor="@color/neutraltan"
     >

    <LinearLayout
        android:orientation="horizontal"
        android:padding="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical" >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivPhoto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@android:drawable/ic_menu_camera"
            android:contentDescription="@string/profile_photo"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay_CircleImageView"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:fontFamily="@font/jetbrains_mono"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:textSize="16sp"
            android:text="@string/display_name" />

        <Button
            android:id="@+id/btnAddFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jetbrains_mono"
            android:backgroundTint="#1b3b00"
            android:textColor="@color/lightgrey"
            android:text="@string/add" />

        <Button
            android:id="@+id/btnAcceptFriend"
            android:fontFamily="@font/jetbrains_mono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:backgroundTint="#1b3b00"
            android:textColor="@color/lightgrey"
            android:visibility="gone" />


        <Button
            android:id="@+id/btnDenyFriend"
            android:fontFamily="@font/jetbrains_mono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deny"
            android:layout_marginStart="8dp"
            android:backgroundTint="#4f0000"
            android:textColor="@color/lightgrey"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnPending"
            android:fontFamily="@font/jetbrains_mono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending"
            android:enabled="false"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnFriend"
            android:fontFamily="@font/jetbrains_mono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend"
            android:enabled="false"
            android:visibility="gone"/>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>