<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="3dp"
    app:cardElevation="2dp"
    app:strokeWidth="1dp"
    app:strokeColor="#33000000"
    android:background="?attr/colorSurface" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical"
        android:background="@color/neutraltan">

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:src="@android:drawable/picture_frame"
            android:contentDescription="@string/profile_photo"
            android:layout_marginEnd="12dp"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:fontFamily="@font/jetbrains_mono"
            android:text="@string/user_name" />

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnDecline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decline"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnPending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending"
            android:enabled="false"
            android:visibility="gone"/>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
