<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="2dp"
    android:layout_marginVertical="3dp"
    app:strokeWidth="1dp"
    app:strokeColor="#33000000"
     >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/neutraltan">

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_person_24"
            android:contentDescription="@string/friend_photo"
            android:layout_marginEnd="12dp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/friend_name"
            android:layout_weight="1"
            android:fontFamily="@font/jetbrains_mono"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/btnFavoriteFriend"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_favorite_halo"
            android:contentDescription="@string/favorites"
            android:src="@drawable/sharp_star_border_32"
            android:scaleType="center"
            android:padding="6dp"
            app:tint="@color/yellow" />

        <Button
            android:id="@+id/btnMessageFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jetbrains_mono"
            android:textColor="@color/darktaupe"
            android:backgroundTint="@color/yellow"
            android:text="@string/message" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>

