<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="3dp"
    android:background="@color/neutraltan"
    android:padding="8dp">

    <!-- optional avatar, you can remove this -->
    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_person_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/friend_request_photo"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/requesting_user"
        android:gravity="center_vertical"
        android:textSize="16sp"
        android:fontFamily="@font/jetbrains_mono"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/ivAvatar"
        app:layout_constraintTop_toTopOf="@id/ivAvatar"
        app:layout_constraintBottom_toBottomOf="@id/ivAvatar"
        app:layout_constraintEnd_toStartOf="@id/btnAccept" />

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:textColor="@color/lightgrey"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/oswald_light"
        android:letterSpacing="0.05"
        app:layout_constraintEnd_toStartOf="@id/btnDecline"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/btnDecline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decline"
        android:textColor="@color/lightgrey"
        android:backgroundTint="@color/brown"
        android:fontFamily="@font/oswald_light"
        android:letterSpacing="0.05"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
