<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/fragment_messages.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutraltan">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMessages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/neutralbrown"
        android:padding="8dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp">

        <ImageButton
            android:id="@+id/btnMessageMenu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/outline_more_vert_24"
            android:contentDescription="@string/message_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnMessageMenu"
            app:layout_constraintEnd_toStartOf="@+id/btnSend"
            app:layout_constraintWidth_max="488dp"
            android:layout_marginEnd="8dp"
            android:minHeight="48dp"
            android:inputType="textShortMessage|textCapSentences|textMultiLine"
            android:maxLines="5"
            android:importantForAutofill="no"
            android:hint="@string/message_ellipses"
            android:textColor="@android:color/black"
            android:textColorHint="#616161" />

        <ImageButton
            android:id="@+id/btnSend"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/etMessage"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="12dp"
            android:scaleType="centerInside"
            android:src="@android:drawable/ic_menu_send"
            app:tint="@android:color/black"
            android:contentDescription="@string/send" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
